Fix for overflow, and main overflow (mobile)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  overflow: hidden;
   transition-duration: 0.5s;
   padding: 0;
   margin: 0;
@@ -9,11 +10,6 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-  body{
-    
-      
-      
-  }
   main{
     width: calc(100% + 250px) !important;
     overflow: hidden;
@@ -69,7 +65,11 @@ main{
 }
 
 
-
+.flex-content{
+  display: flex;
+  height: 100vh;
+  overflow-x: hidden !important;
+}
 .content{
   width: 100%;
   height: 50vh;
